<resources>
    <string name="app_name">Real Estate Manager</string>


    <!-- DETAILS   -->
    <string name="details_label">DETAILS</string>
    <string name="details_type_title">Type:</string>
    <string name="details_statut_title">Statut:</string>
    <string name="details_price_title">Price:</string>
    <string name="details_address_title">Address:</string>
    <string name="details_city_title">City:</string>
    <string name="details_images_title">Images:</string>
    <string name="details_description_title">Description:</string>
    <string name="details_surface_title">Surface:</string>
    <string name="details_number_of_rooms_title">Number of rooms:</string>
    <string name="details_points_of_interest_title">Points of interests:</string>
    <string name="details_publication_date_title">Publication date:</string>
    <string name="details_sold_date_title">Sold date:</string>
    <string name="details_agent_name_title">Agent name:</string>
    <string name="details_add_gallery_button">Add from gallery</string>
    <string name="details_add_camera_button">Take a picture</string>
    <string name="details_type_hint">Loft</string>
    <string name="details_statut_hint">On sale</string>
    <string name="details_price_hint">$1 000 000</string>
    <string name="details_address_hint">15 street, montain - NY 10050</string>
    <string name="details_city_hint">Brooklyn</string>
    <string name="details_description_hint">Beautiful space, agreable...</string>
    <string name="details_surface_hint">300 m2</string>
    <string name="details_number_of_rooms_hint">15</string>
    <string name="details_points_of_interest_hint">school</string>
    <string name="details_publication_date_hint">04/10/2019</string>
    <string name="details_sold_date_hint">------</string>
    <string name="details_agent_name_hint">Brian</string>

    <!-- CREATE -->
    <string name="create_submit_button">Create estate</string>
    <string name="create_photo_txt_hint">Add Short Description here</string>
    <string name="create_add_short_txt_button">Valid the text</string>
    <string name="create_valid_button_empty_photos">You must at less enter one picture!</string>
    <string name="create_price_title">Price (USD):</string>

    <!--  MODIFY  -->
    <string name="modify_submit_button">Modify estate</string>

    <!-- SPINNER-->
    <string-array name="statut_array">
        <item>On sale</item>
        <item>Sold</item>
    </string-array>

    <!--  TEXTAUTOCOMPLETE  -->
    <string-array name="type_array">
        <item>Loft</item>
        <item>Duplex</item>
        <item>Penthouse</item>
        <item>Openspace</item>
    </string-array>

    <string-array name="city_array">
        <item>Brooklyn</item>
        <item>Manhatann</item>
    </string-array>

    <!--  MENU ICONS  -->
    <string name="menu_search">Search</string>
    <string name="menu_map">Map</string>
    <string name="menu_loan">Bank loan simulator </string>
    <string name="menu_convert_devices">USD vs EUR</string>
    <string name="menu_setting">Setting</string>
    <string name="title_activity_maps_estate">Map</string>
    <string name="cancel">cancel</string>
    <string name="dialog_search_button">search</string>

    <!-- SEARCH -->
    <string name="search_label">SEARCH</string>
    <string name="search_type_title">Type:</string>
    <string name="search_statut_title">Statut:</string>
    <string name="search_agent_title">Agent:</string>
    <string name="search_city_title">City:</string>
    <string name="search_address_title">Address:</string>
    <string name="search_price_title">Price (USD):</string>
    <string name="search_surface_title">Surface:</string>
    <string name="search_number_of_rooms_title">Number of rooms:</string>
    <string name="search_points_of_interest_title">Points of interest:</string>
    <string name="search_publication_date_title">Publication date:</string>
    <string name="search_sold_date_title">Sold date:</string>

    <!-- FILTER-->
    <string name="filtered_clear_filter">Clear Filter</string>

    <!--  MAP  -->
    <string name="map_label">MAP</string>
    <string name="im_here">I\' m here</string>
    <string name="no_internet_connection">You\' aren\' t connected to internet !</string>

    <!-- NOTIFICATION-->
    <string name="notification_title">A new Estate has been created</string>

    <!-- LOAN SIMULATOR -->
    <string name="loan_simulator_label">Bank Loan Simulator</string>
    <string name="loan_total_amonut_title">Total amount</string>
    <string name="loan_period_title">Loan period</string>
    <string name="loan_financial_contribution_title">Financial contribution</string>
    <string name="loan_result_btn_txt">Show result</string>
    <string name="loan_enter_amount">Please to enter a amount value !</string>
    <string name="loan_monthly_result">Your Monthly repayment will be:</string>
    <string name="loan_cost_result">Your total loan cost will be:</string>
    <string name="loan_lower_contribution">Please to enter a lower contribution than the amount</string>
</resources>
