<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <Space
                android:layout_width="match_parent"
                android:layout_height="30dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/details_type_title"
                    style="@style/Text_title_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/details_type_title"
                    android:textAlignment="center"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/details_type_text"
                    style="@style/details_text_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="Loft" />

                <TextView
                    android:id="@+id/details_statut_title"
                    style="@style/Text_title_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/details_statut_title" />

                <EditText
                    android:id="@+id/details_statut_text"
                    style="@style/details_text_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="On sale!" />
            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/details_price_title"
                    style="@style/Text_title_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/details_price_title" />

                <EditText
                    android:id="@+id/details_price_text"
                    style="@style/details_text_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="$10,000.000" />
            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <TextView
                android:id="@+id/details_address_title"
                style="@style/Text_title_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/details_address_title" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <EditText
                android:id="@+id/details_address_text"
                style="@style/details_text_style2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="15 street, montain - NY 10050" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="40dp" />

            <TextView
                android:id="@+id/details_images_title"
                style="@style/Text_title_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/details_images_title" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="15dp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/details_pics_recyclerview"
                android:name="com.openclassrooms.realestatemanager.controler.DetailsFragment"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                app:layoutManager="LinearLayoutManager"
                tools:context=".controler.DetailsFragment"
                tools:listitem="@layout/details_fragment_item" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="15dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/floatingActionButton7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:clickable="true"
                    app:srcCompat="@drawable/ic_baseline_remove_24" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/floatingActionButton6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:clickable="true"
                    app:srcCompat="@drawable/add_black_24dp" />
            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="30dp" />

            <TextView
                android:id="@+id/details_description_title"
                style="@style/Text_title_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/details_description_title" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/details_description_text"
                        style="@style/details_text_style2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Beautiful space, agreable..." />

                </LinearLayout>
            </ScrollView>

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/details_surface_title"
                    style="@style/Text_title_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/details_surface_title" />

                <EditText
                    android:id="@+id/details_surface_text"
                    style="@style/details_text_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="300 m2" />

                <TextView
                    android:id="@+id/details_number_of_rooms_title"
                    style="@style/Text_title_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/details_number_of_rooms_title" />

                <EditText
                    android:id="@+id/details_number_of_rooms_text"
                    style="@style/details_text_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="15" />
            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <TextView
                android:id="@+id/details_points_of_interests_title"
                style="@style/Text_title_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/details_points_of_interest_title" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <EditText
                android:id="@+id/details_points_of_interests_text"
                style="@style/details_text_style2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="School, booling, Museum, Restaurants, ..." />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/details_publication_date_title"
                    style="@style/Text_title_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/details_publication_date_title" />

                <EditText
                    android:id="@+id/details_publication_date_text"
                    style="@style/details_text_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="04/ 10/ 2019" />

                <TextView
                    android:id="@+id/details_sold_date_title"
                    style="@style/Text_title_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/details_sold_date_title" />

                <EditText
                    android:id="@+id/details_sold_date_text"
                    style="@style/details_text_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="10/ 11/ 2020" />
            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/details_agent_name_title"
                    style="@style/Text_title_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/details_agent_name_title" />

                <EditText
                    android:id="@+id/details_agent_name_text"
                    style="@style/details_text_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="Billy bob skippy" />
            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="30dp" />

            <Button
                android:id="@+id/submit_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/create_submit_button" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="40dp" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>